# Toyproj1

./: CMakeLists.txt  README.md  firstwidget.cpp  firstwidget.h  firstwidget.ui  main.cpp
